--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,7 +112,7 @@
     "editor.quickSuggestions": {
       "strings": true
     },
-    "editor.defaultFormatter": "josetr.cmake-language-support-vscode",
+    "editor.defaultFormatter": "cheshirekow.cmake-format",
     "editor.formatOnSave": true
   },
   "[yaml]": {
