--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,7 +99,23 @@
     "cinttypes": "cpp",
     "valarray": "cpp",
     "*.def": "cpp",
-    "execution": "cpp"
+    "execution": "cpp",
+    "barrier": "cpp",
+    "cfenv": "cpp",
+    "complex": "cpp",
+    "expected": "cpp",
+    "generator": "cpp",
+    "latch": "cpp",
+    "mdspan": "cpp",
+    "print": "cpp",
+    "scoped_allocator": "cpp",
+    "source_location": "cpp",
+    "spanstream": "cpp",
+    "stacktrace": "cpp",
+    "stdfloat": "cpp",
+    "strstream": "cpp",
+    "syncstream": "cpp",
+    "typeindex": "cpp"
   },
   "cmake.configureOnEdit": false,
   "cmake.configureArgs": [
@@ -145,5 +161,13 @@
 "intellicodeApiExamples.loggingLevel": "ERROR",
 "path-intellisense.autoTriggerNextSuggestion": true,
 "C_Cpp.errorSquiggles": "enabled",
-"C_Cpp.autocompleteAddParentheses": true
+"C_Cpp.autocompleteAddParentheses": true,
+"C_Cpp.default.compileCommands": [
+  "${workspaceFolder}/out/msvc/build/compile_commands.json"
+],
+"C_Cpp.codeAnalysis.clangTidy.useBuildPath": true,
+"C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
+  "modernize-use-trailing-return-type",
+  "cppcoreguidelines-avoid-magic-numbers"
+]
 }
