--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,42 +1,63 @@
-project(Catch-test)
+project(PingPong-test)
 
-FetchContent_Declare(Catch2 GIT_REPOSITORY https://github.com/catchorg/Catch2.git GIT_TAG v3.6.0)
-FetchContent_MakeAvailable(Catch2)
+# Find Google Test from vcpkg
+find_package(GTest CONFIG REQUIRED)
 
 add_executable(${PROJECT_NAME} test.cpp)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE pingpong_game)
+target_link_libraries(${PROJECT_NAME} PRIVATE pingpong_game_utility)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Catch2WithMain)
+# Link against Google Test
+target_link_libraries(${PROJECT_NAME} PRIVATE GTest::gtest GTest::gtest_main GTest::gmock)
 
 set_target_properties(
     ${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
     )
 
-set_target_properties(${PROJECT_NAME} Catch2 Catch2WithMain PROPERTIES FOLDER "Test")
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Test")
 
-list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
-include(Catch)
-catch_discover_tests(${PROJECT_NAME})
+# Enable Google Test discovery for CTest
+include(GoogleTest)
+gtest_discover_tests(${PROJECT_NAME})
 
 file(GLOB RESOURCE_FILES LIST_DIRECTORIES false "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.*")
 target_sources(${PROJECT_NAME} PUBLIC "${RESOURCE_FILES}")
 source_group("Resource Files" FILES ${RESOURCE_FILES})
 
-if(WIN32)
+add_custom_command(
+    TARGET ${PROJECT_NAME}
+    POST_BUILD
+    COMMENT "Copy resources"
+    COMMAND
+        ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/resources
+        $<TARGET_FILE_DIR:${PROJECT_NAME}>/resources
+    VERBATIM
+    )
+
+# Copy resources from pingpong_game/resources excluding *.txt files
+set(PINGPONG_RESOURCES_DIR "${CMAKE_SOURCE_DIR}/src/pingpong_game/resources")
+
+if(UNIX)
     add_custom_command(
         TARGET ${PROJECT_NAME}
         POST_BUILD
-        COMMENT "Copy resources"
-        COMMAND
-            ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/resources
-            $<TARGET_FILE_DIR:${PROJECT_NAME}>/../resources
+        COMMENT "Copy pingpong_game resources (excluding *.txt)"
+        COMMAND find ${PINGPONG_RESOURCES_DIR} -type f ! -name "*.txt" -exec ${CMAKE_COMMAND} -E copy {} $<TARGET_FILE_DIR:${PROJECT_NAME}>/resources/ \;
         VERBATIM
-        )
+    )
+elseif(WIN32)
+    # Windows version using PowerShell
+    add_custom_command(
+        TARGET ${PROJECT_NAME}
+        POST_BUILD
+        COMMENT "Copy pingpong_game resources (excluding *.txt)"
+        COMMAND powershell -Command "Get-ChildItem -Path '${PINGPONG_RESOURCES_DIR}' -Recurse -File | Where-Object { $_.Extension -ne '.txt' } | Copy-Item -Destination '$<TARGET_FILE_DIR:${PROJECT_NAME}>/resources' -Force"
+        VERBATIM
+    )
 endif()
 
 install(
-    TARGETS ${PROJECT_NAME} Catch2 Catch2WithMain
+    TARGETS ${PROJECT_NAME}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
